--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ zhihu_username:     h
 github_username:    HansonHH
 #twitter_username:  huxpro
 facebook_username:  huxpro
-
+linkedin_username:  hansonhh
 
 # Build settings
 highlighter: pygments
