--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ url: "http://HansonHH.github.io"
 # SNS settings
 RSS: false
 weibo_username:     huxpro
-zhihu_username:     h
+zhihu_username:     han-xin-28
 github_username:    HansonHH
 #twitter_username:  huxpro
 facebook_username:  huxpro
