--- a/_config.yml
+++ b/_config.yml
@@ -48,7 +48,7 @@ useGoogleAnalysis: true     # TODO
 # Sidebar settings
 sidebar: true
 sidebar-featured-tags: true
-sidebar-about-description: "写写代码，做做设计，看看产品。世界那么大，多玩玩看看。"
+sidebar-about-description: "不知疲倦地翻越每一座山丘。"
 sidebar-avatar: /img/avatar-xin.jpg     # use absolute URL.
 
 # Friends
