--- a/_config.yml
+++ b/_config.yml
@@ -34,9 +34,9 @@ kramdown:
 
 # Duoshuo settings
 # please set your own DuoShuo account in `post.html` and `about.html`
-useDuoshuo: true    # use both Comment and Share
-useShare: true      # use Comment only. seeing the Share component is depend on Comment so we can NOT use share only.
-
+useDuoshuo: false    # use both Comment and Share
+useShare: false      # use Comment only. seeing the Share component is depend on Comment so we can NOT use share only.
+userDisqus: true
 
 # Todo: Analysis settings
 # Please set your own analysis account in `head.html`(Baidu) and `default.html`(QQ)
